# fasterfix

./: .editorconfig  AUTHORS  CMakeLists.txt  FasterFIX_vs19.sln
src/: CMakeLists.txt  fasterfix.cpp  fix.h  parser_uint.h  tagvalue_buffer.h  tagvalue_parser.h  tagvalue_processor.h
test/: CMakeLists.txt  test_ff.cpp  test_ff.h
